clean up dependencies, minor UI edits

--- a/public/adaptability-planning/index.html
+++ b/public/adaptability-planning/index.html
@@ -37,7 +37,7 @@
 
   
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1538500877">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542125410">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -53,24 +53,11 @@
 <div id="allwrapper">
 
 
-<nav id="nav top" class="topbar">
-
-    <div class="topbar--content">
-        <div class="topbar--unit--logo">  
+    <a class="logo--link" href="/">
+        <div class="logo">
+            UI Developement Musings
         </div>
-
-        <div class="nav-menu"></div>
-            <div class="topbar--unit">
-                <a class="topbar--link" href="/">
-                    Home
-                </a>
-            </div>
-        
-        </div>
-    </div>
-
-</nav>
-
+    </a>
 
 
 <section class="article selectable-article">
@@ -153,7 +140,7 @@ Written and presented by Stewart Brand.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1538500877">
+<script src="/dist/bundle.js?1542125410">
 </script>
 
 </div>
