--- a/public/ford-marketing/index.html
+++ b/public/ford-marketing/index.html
@@ -73,7 +73,7 @@ The public thought nothing of a car unless it made speed—unless it beat other 
 
   
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1538500877">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542125410">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -89,24 +89,11 @@ The public thought nothing of a car unless it made speed—unless it beat other 
 <div id="allwrapper">
 
 
-<nav id="nav top" class="topbar">
-
-    <div class="topbar--content">
-        <div class="topbar--unit--logo">  
+    <a class="logo--link" href="/">
+        <div class="logo">
+            UI Developement Musings
         </div>
-
-        <div class="nav-menu"></div>
-            <div class="topbar--unit">
-                <a class="topbar--link" href="/">
-                    Home
-                </a>
-            </div>
-        
-        </div>
-    </div>
-
-</nav>
-
+    </a>
 
 
 <section class="article selectable-article">
@@ -207,7 +194,7 @@ It appeared that we were the under dog and we had the public&rsquo;s sympathy.</
 
 </footer>
 
-<script src="/dist/bundle.js?1538500877">
+<script src="/dist/bundle.js?1542125410">
 </script>
 
 </div>
