--- a/public/alt-lazy-load/index.html
+++ b/public/alt-lazy-load/index.html
@@ -46,7 +46,7 @@ quickly to get to the middle part and the picture wasn&rsquo;t there yet?
 
   
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1538500877">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542125410">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -62,24 +62,11 @@ quickly to get to the middle part and the picture wasn&rsquo;t there yet?
 <div id="allwrapper">
 
 
-<nav id="nav top" class="topbar">
-
-    <div class="topbar--content">
-        <div class="topbar--unit--logo">  
+    <a class="logo--link" href="/">
+        <div class="logo">
+            UI Developement Musings
         </div>
-
-        <div class="nav-menu"></div>
-            <div class="topbar--unit">
-                <a class="topbar--link" href="/">
-                    Home
-                </a>
-            </div>
-        
-        </div>
-    </div>
-
-</nav>
-
+    </a>
 
 
 <section class="article selectable-article">
@@ -210,7 +197,7 @@ Anyhow, it&rsquo;s good to have it in a toolbox.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1538500877">
+<script src="/dist/bundle.js?1542125410">
 </script>
 
 </div>
