--- a/public/complexity/index.html
+++ b/public/complexity/index.html
@@ -49,7 +49,7 @@ the most convoluted ones, but actually, everyday things like traffic or sales ar
 
   
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1538500877">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542125410">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -65,24 +65,11 @@ the most convoluted ones, but actually, everyday things like traffic or sales ar
 <div id="allwrapper">
 
 
-<nav id="nav top" class="topbar">
-
-    <div class="topbar--content">
-        <div class="topbar--unit--logo">  
+    <a class="logo--link" href="/">
+        <div class="logo">
+            UI Developement Musings
         </div>
-
-        <div class="nav-menu"></div>
-            <div class="topbar--unit">
-                <a class="topbar--link" href="/">
-                    Home
-                </a>
-            </div>
-        
-        </div>
-    </div>
-
-</nav>
-
+    </a>
 
 
 <section class="article selectable-article">
@@ -170,7 +157,7 @@ In the big picture it&rsquo;s just a bird shit.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1538500877">
+<script src="/dist/bundle.js?1542125410">
 </script>
 
 </div>
