--- a/public/offline/index.html
+++ b/public/offline/index.html
@@ -16,7 +16,7 @@
   
 
   
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1538500877">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542125410">
 
   <link rel="manifest" href="/manifest.json">
 
@@ -24,24 +24,11 @@
 <body>
 <div id="allwrapper">
 
-<nav id="nav top" class="topbar">
-
-    <div class="topbar--content">
-        <div class="topbar--unit--logo">  
+    <a class="logo--link" href="/">
+        <div class="logo">
+            UI Developement Musings
         </div>
-
-        <div class="nav-menu"></div>
-            <div class="topbar--unit">
-                <a class="topbar--link" href="/">
-                    Home
-                </a>
-            </div>
-        
-        </div>
-    </div>
-
-</nav>
-
+    </a>
 
 
 
