--- a/public/resilient-ui/index.html
+++ b/public/resilient-ui/index.html
@@ -55,7 +55,7 @@ You need to design your software with ease of modification in mind.
 
   
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1538500877">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542125410">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -71,24 +71,11 @@ You need to design your software with ease of modification in mind.
 <div id="allwrapper">
 
 
-<nav id="nav top" class="topbar">
-
-    <div class="topbar--content">
-        <div class="topbar--unit--logo">  
+    <a class="logo--link" href="/">
+        <div class="logo">
+            UI Developement Musings
         </div>
-
-        <div class="nav-menu"></div>
-            <div class="topbar--unit">
-                <a class="topbar--link" href="/">
-                    Home
-                </a>
-            </div>
-        
-        </div>
-    </div>
-
-</nav>
-
+    </a>
 
 
 <section class="article selectable-article">
@@ -205,7 +192,7 @@ That&rsquo;s why I like typography — it&rsquo;s a tool to achieve clarity and 
 
 </footer>
 
-<script src="/dist/bundle.js?1538500877">
+<script src="/dist/bundle.js?1542125410">
 </script>
 
 </div>
