change name in 'logo' (top)

--- a/public/complexity/index.html
+++ b/public/complexity/index.html
@@ -49,7 +49,7 @@ the most convoluted ones, but actually, everyday things like traffic or sales ar
 
   
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542125410">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542152181">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -67,7 +67,7 @@ the most convoluted ones, but actually, everyday things like traffic or sales ar
 
     <a class="logo--link" href="/">
         <div class="logo">
-            UI Developement Musings
+            Software Musings
         </div>
     </a>
 
@@ -157,7 +157,7 @@ In the big picture it&rsquo;s just a bird shit.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1542125410">
+<script src="/dist/bundle.js?1542152181">
 </script>
 
 </div>
