--- a/public/crowd/index.html
+++ b/public/crowd/index.html
@@ -46,7 +46,7 @@ show signs of independent thinking.
 
   
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542125410">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542152181">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -64,7 +64,7 @@ show signs of independent thinking.
 
     <a class="logo--link" href="/">
         <div class="logo">
-            UI Developement Musings
+            Software Musings
         </div>
     </a>
 
@@ -190,7 +190,7 @@ It&rsquo;s not a kind of content you see often. There are many programs written 
 
 </footer>
 
-<script src="/dist/bundle.js?1542125410">
+<script src="/dist/bundle.js?1542152181">
 </script>
 
 </div>
