--- a/public/offline/index.html
+++ b/public/offline/index.html
@@ -16,7 +16,7 @@
   
 
   
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542125410">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542152181">
 
   <link rel="manifest" href="/manifest.json">
 
@@ -26,7 +26,7 @@
 
     <a class="logo--link" href="/">
         <div class="logo">
-            UI Developement Musings
+            Software Musings
         </div>
     </a>
 
