--- a/public/ambitious-projects/index.html
+++ b/public/ambitious-projects/index.html
@@ -34,7 +34,7 @@
 
   
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542125410">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542152181">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -52,7 +52,7 @@
 
     <a class="logo--link" href="/">
         <div class="logo">
-            UI Developement Musings
+            Software Musings
         </div>
     </a>
 
@@ -129,7 +129,7 @@ It&rsquo;s about handling negative emotions, picking the right thing to work on,
 
 </footer>
 
-<script src="/dist/bundle.js?1542125410">
+<script src="/dist/bundle.js?1542152181">
 </script>
 
 </div>
