--- a/public/henry-ford-for-makers/index.html
+++ b/public/henry-ford-for-makers/index.html
@@ -70,7 +70,7 @@ much simpler than they now are and at the same time be better looking.
 
   
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542125410">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542152181">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -88,7 +88,7 @@ much simpler than they now are and at the same time be better looking.
 
     <a class="logo--link" href="/">
         <div class="logo">
-            UI Developement Musings
+            Software Musings
         </div>
     </a>
 
@@ -255,7 +255,7 @@ earth definitely to say what is and what is not possible.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1542125410">
+<script src="/dist/bundle.js?1542152181">
 </script>
 
 </div>
