--- a/public/research-decision/index.html
+++ b/public/research-decision/index.html
@@ -46,7 +46,7 @@ But your brain is somehow full of doubts all the time, no matter what you know.
 
   
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542125410">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542152181">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -64,7 +64,7 @@ But your brain is somehow full of doubts all the time, no matter what you know.
 
     <a class="logo--link" href="/">
         <div class="logo">
-            UI Developement Musings
+            Software Musings
         </div>
     </a>
 
@@ -149,7 +149,7 @@ You make a decision about the next move and stop looking for crystal balls.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1542125410">
+<script src="/dist/bundle.js?1542152181">
 </script>
 
 </div>
