--- a/public/vim-typography/index.html
+++ b/public/vim-typography/index.html
@@ -43,7 +43,7 @@ All examples are for editing .vimrc and .gvimrc files.
 
   
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542125410">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542152181">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -61,7 +61,7 @@ All examples are for editing .vimrc and .gvimrc files.
 
     <a class="logo--link" href="/">
         <div class="logo">
-            UI Developement Musings
+            Software Musings
         </div>
     </a>
 
@@ -219,7 +219,7 @@ Consider using some of them in <code>.gvimrc</code> instead of <code>.vimrc</cod
 
 </footer>
 
-<script src="/dist/bundle.js?1542125410">
+<script src="/dist/bundle.js?1542152181">
 </script>
 
 </div>
