change name in 'logo'

--- a/public/html-indicators/index.html
+++ b/public/html-indicators/index.html
@@ -43,7 +43,7 @@ How to show an error indicator during live validation? How to manage a few diffe
 
   
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542152181">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542152349">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -61,7 +61,7 @@ How to show an error indicator during live validation? How to manage a few diffe
 
     <a class="logo--link" href="/">
         <div class="logo">
-            Software Musings
+            Mad Software Musings 
         </div>
     </a>
 
@@ -224,7 +224,7 @@ When a structure is right, a procedure that uses it can be more straight forward
 
 </footer>
 
-<script src="/dist/bundle.js?1542152181">
+<script src="/dist/bundle.js?1542152349">
 </script>
 
 </div>
