--- a/public/alt-lazy-load/index.html
+++ b/public/alt-lazy-load/index.html
@@ -46,7 +46,7 @@ quickly to get to the middle part and the picture wasn&rsquo;t there yet?
 
   
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542152181">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542152349">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -64,7 +64,7 @@ quickly to get to the middle part and the picture wasn&rsquo;t there yet?
 
     <a class="logo--link" href="/">
         <div class="logo">
-            Software Musings
+            Mad Software Musings 
         </div>
     </a>
 
@@ -197,7 +197,7 @@ Anyhow, it&rsquo;s good to have it in a toolbox.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1542152181">
+<script src="/dist/bundle.js?1542152349">
 </script>
 
 </div>
