--- a/public/ford-marketing/index.html
+++ b/public/ford-marketing/index.html
@@ -73,7 +73,7 @@ The public thought nothing of a car unless it made speed—unless it beat other 
 
   
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542152181">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542152349">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -91,7 +91,7 @@ The public thought nothing of a car unless it made speed—unless it beat other 
 
     <a class="logo--link" href="/">
         <div class="logo">
-            Software Musings
+            Mad Software Musings 
         </div>
     </a>
 
@@ -194,7 +194,7 @@ It appeared that we were the under dog and we had the public&rsquo;s sympathy.</
 
 </footer>
 
-<script src="/dist/bundle.js?1542152181">
+<script src="/dist/bundle.js?1542152349">
 </script>
 
 </div>
