--- a/public/maintainable-ui/index.html
+++ b/public/maintainable-ui/index.html
@@ -52,7 +52,7 @@ Here are some examples of SASS based solutions that you can use to make UI more 
 
   
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542152181">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542152349">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -70,7 +70,7 @@ Here are some examples of SASS based solutions that you can use to make UI more 
 
     <a class="logo--link" href="/">
         <div class="logo">
-            Software Musings
+            Mad Software Musings 
         </div>
     </a>
 
@@ -345,7 +345,7 @@ Maybe you won&rsquo;t remember how you figured it out.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1542152181">
+<script src="/dist/bundle.js?1542152349">
 </script>
 
 </div>
