--- a/public/play/index.html
+++ b/public/play/index.html
@@ -37,7 +37,7 @@ Ideas that you get by doing are more in touch with reality — they are more lik
 
   
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542152181">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542152349">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -55,7 +55,7 @@ Ideas that you get by doing are more in touch with reality — they are more lik
 
     <a class="logo--link" href="/">
         <div class="logo">
-            Software Musings
+            Mad Software Musings 
         </div>
     </a>
 
@@ -123,7 +123,7 @@ Ideas that you get by doing are more in touch with reality — they are more lik
 
 </footer>
 
-<script src="/dist/bundle.js?1542152181">
+<script src="/dist/bundle.js?1542152349">
 </script>
 
 </div>
