--- a/public/resilient-ui/index.html
+++ b/public/resilient-ui/index.html
@@ -55,7 +55,7 @@ You need to design your software with ease of modification in mind.
 
   
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542152181">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542152349">
 
   <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
   <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
@@ -73,7 +73,7 @@ You need to design your software with ease of modification in mind.
 
     <a class="logo--link" href="/">
         <div class="logo">
-            Software Musings
+            Mad Software Musings 
         </div>
     </a>
 
@@ -192,7 +192,7 @@ That&rsquo;s why I like typography — it&rsquo;s a tool to achieve clarity and 
 
 </footer>
 
-<script src="/dist/bundle.js?1542152181">
+<script src="/dist/bundle.js?1542152349">
 </script>
 
 </div>
