--- a/public/adaptability-planning/index.html
+++ b/public/adaptability-planning/index.html
@@ -37,12 +37,10 @@
 
   
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542152349">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542488186">
 
-  <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
-  <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
-  <link rel="icon" type="image/png" href="/icon512.png?v=2" sizes="512v512">
-  <link rel="apple-touch-icon" href="/icon320.png?v=2">
+  <link rel="icon" type="image/png" href="/icon512.png?v=3" sizes="512v512">
+  <link rel="apple-touch-icon" href="/icon512.png?v=3" sizes="512v512">
 
   <link rel="manifest" href="/manifest.json">
 
@@ -106,7 +104,7 @@ Written and presented by Stewart Brand.</p>
   <div class="subnav--line">
     
       <div class="subnav--tag">next: </div>
-      <div><a class="next" href="https://bart747.github.io/play/"> Play is Essential</a></div>
+      <div><a class="next" href="https://bart747.github.io/lynch-ideas/"> David Lynch on Catching Ideas</a></div>
     
   </div>
 </section>
@@ -140,7 +138,7 @@ Written and presented by Stewart Brand.</p>
 
 </footer>
 
-<script src="/dist/bundle.js?1542152349">
+<script src="/dist/main.js?1542488186">
 </script>
 
 </div>
