--- a/public/html-indicators/index.html
+++ b/public/html-indicators/index.html
@@ -43,12 +43,10 @@ How to show an error indicator during live validation? How to manage a few diffe
 
   
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542152349">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542488186">
 
-  <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
-  <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
-  <link rel="icon" type="image/png" href="/icon512.png?v=2" sizes="512v512">
-  <link rel="apple-touch-icon" href="/icon320.png?v=2">
+  <link rel="icon" type="image/png" href="/icon512.png?v=3" sizes="512v512">
+  <link rel="apple-touch-icon" href="/icon512.png?v=3" sizes="512v512">
 
   <link rel="manifest" href="/manifest.json">
 
@@ -224,7 +222,7 @@ When a structure is right, a procedure that uses it can be more straight forward
 
 </footer>
 
-<script src="/dist/bundle.js?1542152349">
+<script src="/dist/main.js?1542488186">
 </script>
 
 </div>
