--- a/public/lynch-ideas/index.html
+++ b/public/lynch-ideas/index.html
@@ -64,12 +64,10 @@ By the way, just look at these amazing animations and color compositions.
 
   
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542152349">
+  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?1542488186">
 
-  <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
-  <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
-  <link rel="icon" type="image/png" href="/icon512.png?v=2" sizes="512v512">
-  <link rel="apple-touch-icon" href="/icon320.png?v=2">
+  <link rel="icon" type="image/png" href="/icon512.png?v=3" sizes="512v512">
+  <link rel="apple-touch-icon" href="/icon512.png?v=3" sizes="512v512">
 
   <link rel="manifest" href="/manifest.json">
 
@@ -127,7 +125,7 @@ By the way, just look at these amazing animations and color compositions.
   <div class="subnav--line">
     
       <div class="subnav--tag">prev: </div>
-      <div><a class="previous" href="https://bart747.github.io/play/"> Play is Essential</a></div>
+      <div><a class="previous" href="https://bart747.github.io/adaptability-planning/"> On Fragility of Plans and Adaptability: How Buildings Learn</a></div>
     
   </div>
   <div class="subnav--line">
@@ -167,7 +165,7 @@ By the way, just look at these amazing animations and color compositions.
 
 </footer>
 
-<script src="/dist/bundle.js?1542152349">
+<script src="/dist/main.js?1542488186">
 </script>
 
 </div>
