redesign subnav UI

--- a/public/adaptability-planning/index.html
+++ b/public/adaptability-planning/index.html
@@ -98,6 +98,10 @@ Written and presented by Stewart Brand.</p>
 </section>
 
 <section class="subnav">
+    
+</section>
+
+<section class="subnav">
     <div class="subnav--row">
         
         <div class="subnav--tag">prev: </div>
