--- a/public/ambitious-projects/index.html
+++ b/public/ambitious-projects/index.html
@@ -87,6 +87,10 @@ With emphasis on mental and philosophical side of creating complicated things.</
 </section>
 
 <section class="subnav">
+    
+</section>
+
+<section class="subnav">
     <div class="subnav--row">
         
         <div class="subnav--tag">prev: </div>
