--- a/public/henry-ford-for-makers/index.html
+++ b/public/henry-ford-for-makers/index.html
@@ -212,6 +212,10 @@ earth definitely to say what is and what is not possible.</p>
 </section>
 
 <section class="subnav">
+    
+</section>
+
+<section class="subnav">
     <div class="subnav--row">
         
         <div class="subnav--tag">prev: </div>
