--- a/public/lynch-ideas/index.html
+++ b/public/lynch-ideas/index.html
@@ -117,6 +117,10 @@ By the way, just look at these amazing animations and color compositions.">
 </section>
 
 <section class="subnav">
+    
+</section>
+
+<section class="subnav">
     <div class="subnav--row">
         
         <div class="subnav--tag">prev: </div>
