--- a/public/maintainable-ui/index.html
+++ b/public/maintainable-ui/index.html
@@ -294,6 +294,10 @@ Maybe you won&rsquo;t remember how you figured it out.</p>
 </section>
 
 <section class="subnav">
+    
+</section>
+
+<section class="subnav">
     <div class="subnav--row">
         
     </div>
