--- a/public/payment-ui-friction/index.html
+++ b/public/payment-ui-friction/index.html
@@ -103,6 +103,10 @@ two back to just in case check data again.</p>
 </section>
 
 <section class="subnav">
+    
+</section>
+
+<section class="subnav">
     <div class="subnav--row">
         
         <div class="subnav--tag">prev: </div>
