--- a/public/research-decision/index.html
+++ b/public/research-decision/index.html
@@ -99,6 +99,10 @@ You make a decision about the next move and stop looking for crystal balls.</p>
 </section>
 
 <section class="subnav">
+    
+</section>
+
+<section class="subnav">
     <div class="subnav--row">
         
         <div class="subnav--tag">prev: </div>
