--- a/public/resilient-ui/index.html
+++ b/public/resilient-ui/index.html
@@ -142,6 +142,10 @@ That&rsquo;s why I like typography — it&rsquo;s a tool to achieve clarity and 
 </section>
 
 <section class="subnav">
+    
+</section>
+
+<section class="subnav">
     <div class="subnav--row">
         
         <div class="subnav--tag">prev: </div>
