--- a/public/ui-coins/index.html
+++ b/public/ui-coins/index.html
@@ -110,6 +110,10 @@ Way better than just <em>Password</em>, which will make both forms look very sim
 </section>
 
 <section class="subnav">
+    
+</section>
+
+<section class="subnav">
     <div class="subnav--row">
         
         <div class="subnav--tag">prev: </div>
