--- a/public/vim-typography/index.html
+++ b/public/vim-typography/index.html
@@ -169,6 +169,10 @@ Consider using some of them in <code>.gvimrc</code> instead of <code>.vimrc</cod
 </section>
 
 <section class="subnav">
+    
+</section>
+
+<section class="subnav">
     <div class="subnav--row">
         
         <div class="subnav--tag">prev: </div>
