--- a/public/alt-lazy-load/index.html
+++ b/public/alt-lazy-load/index.html
@@ -147,6 +147,10 @@ Anyhow, it&rsquo;s good to have it in a toolbox.</p>
 </section>
 
 <section class="subnav">
+    
+</section>
+
+<section class="subnav">
     <div class="subnav--row">
         
         <div class="subnav--tag">prev: </div>
