--- a/public/craftsmen-at-work/index.html
+++ b/public/craftsmen-at-work/index.html
@@ -92,6 +92,10 @@ You can learn from it by seeing the process, tricks of the trade, work on detail
 </section>
 
 <section class="subnav">
+    
+</section>
+
+<section class="subnav">
     <div class="subnav--row">
         
         <div class="subnav--tag">prev: </div>
