--- a/public/crowd/index.html
+++ b/public/crowd/index.html
@@ -143,6 +143,10 @@ It&rsquo;s not a kind of content you see often. There are many programs written 
 </section>
 
 <section class="subnav">
+    
+</section>
+
+<section class="subnav">
     <div class="subnav--row">
         
         <div class="subnav--tag">prev: </div>
