--- a/public/html-indicators/index.html
+++ b/public/html-indicators/index.html
@@ -174,6 +174,10 @@ When a structure is right, a procedure that uses it can be more straight forward
 </section>
 
 <section class="subnav">
+    
+</section>
+
+<section class="subnav">
     <div class="subnav--row">
         
         <div class="subnav--tag">prev: </div>
