--- a/public/planck/index.html
+++ b/public/planck/index.html
@@ -136,6 +136,10 @@ his whole world for the moment.</p>
 </section>
 
 <section class="subnav">
+    
+</section>
+
+<section class="subnav">
     <div class="subnav--row">
         
         <div class="subnav--tag">prev: </div>
