--- a/public/404.html
+++ b/public/404.html
@@ -60,9 +60,8 @@
 <section class="article article--narrow">
     
     <h2><span class="orange">Oops!</span><br>
-    The page you were looking for isn't here.</h2>
-
-    <p>Maybe it doesn't exist anymore or the address was typed incorrectly.</p>
+    The page you're looking for isn't here.</h2>
+    <a href="https://bart747.github.io">Homepage</a>
 
 </section>
 
