--- a/public/complexity/index.html
+++ b/public/complexity/index.html
@@ -84,7 +84,11 @@ the most convoluted ones, but actually, everyday things like traffic or sales ar
 
 <p>If you deal with software development, you have to be more analytical about dependencies and scale than sales people or taxi drivers. But you&rsquo;re not in more convoluted environment. It&rsquo;s just a difference in awareness.</p>
 
-<p>A salesman knows that he can select and call ten
+<p>Good example of fucked up awareness are people who eagerly try to figure out extremely nuanced events,
+with confidence that it will do something positive, fore sure not harm,
+just because they acquired some software to do some statistics. Imagine management people trying find out what their potential clients really want, by looking at stats and surveys.</p>
+
+<p>Now lets look at one salesman. He knows that he can select and call ten
 different prospects and get “no” from nine of them. He will keep trying. He will
 adjust the course (build new heuristics) every time he notices a pattern.
 However, he will never figure
@@ -92,6 +96,8 @@ out a theory that universally explains what makes people buy, so that he
 can predict decisions, or call only those who will almost for sure say “yes”.
 And this is OK — he will do well anyway.
 People like him don&rsquo;t bother to do much calculation or predictions.
+It&rsquo;s impossible to figure out all the stuff
+that&rsquo;s going on in this kind of work situation.
 They just progressively iterate, tinker, observe and judge.
 And they accept that they will never know everything.</p>
 
@@ -100,7 +106,10 @@ understand all its aspects to get by.
 It&rsquo;s about iteration and couple of good heuristics — not predictiveness.
 On the other hand, learning something commonly known as
 hard and complicated doesn&rsquo;t mean that your abilities to predict the future are now greater.
-In the big picture it&rsquo;s just a bird shit.</p>
+In the big picture it&rsquo;s just a bird shit –
+far from what you need to process to get all the nuances of a market.</p>
+
+<p><em>last edit: Apr 30, 2019</em></p>
 
     </div>
 
