fix broken links

--- a/public/complexity/index.html
+++ b/public/complexity/index.html
@@ -119,7 +119,7 @@ far from what you need to process to get all the nuances of a market.</p>
     
     <div class="subnav--tag">You also might like:</div>
     <div>
-        <a class="similar" href="https://bart747.github.ioresearch-decision"> Research vs Making Decisions</a>
+        <a class="similar" href="https://bart747.github.io/research-decision"> Research vs Making Decisions</a>
     </div>
     
 </section>
