add analytics script to HEAD

--- a/public/vim-typography/index.html
+++ b/public/vim-typography/index.html
@@ -47,6 +47,17 @@ All examples are for editing .vimrc and .gvimrc files.">
 
     <link rel="manifest" href="/manifest.json">
 
+    
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-70300765-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        window['ga-disable-UA-70300765-1'] = true;
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-70300765-1');
+    </script>
+
     <meta name="google-site-verification" content="vBPgvbkTPtu2MKsCfMMETSBB-crQhj8AZuJ2JUUF2_0" />
 
 </head>
