--- a/public/ford-marketing/index.html
+++ b/public/ford-marketing/index.html
@@ -77,6 +77,17 @@ The public thought nothing of a car unless it made speed—unless it beat other 
 
     <link rel="manifest" href="/manifest.json">
 
+    
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-70300765-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        window['ga-disable-UA-70300765-1'] = true;
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-70300765-1');
+    </script>
+
     <meta name="google-site-verification" content="vBPgvbkTPtu2MKsCfMMETSBB-crQhj8AZuJ2JUUF2_0" />
 
 </head>
