--- a/public/maintainable-ui/index.html
+++ b/public/maintainable-ui/index.html
@@ -53,6 +53,17 @@ Here are some examples of SASS based solutions that you can use to make UI more 
 
     <link rel="manifest" href="/manifest.json">
 
+    
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-70300765-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        window['ga-disable-UA-70300765-1'] = true;
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-70300765-1');
+    </script>
+
     <meta name="google-site-verification" content="vBPgvbkTPtu2MKsCfMMETSBB-crQhj8AZuJ2JUUF2_0" />
 
 </head>
