--- a/public/payment-ui-friction/index.html
+++ b/public/payment-ui-friction/index.html
@@ -56,6 +56,17 @@ The fact that you&rsquo;re about to say bye to some of your money triggers that.
 
     <link rel="manifest" href="/manifest.json">
 
+    
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-70300765-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        window['ga-disable-UA-70300765-1'] = true;
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-70300765-1');
+    </script>
+
     <meta name="google-site-verification" content="vBPgvbkTPtu2MKsCfMMETSBB-crQhj8AZuJ2JUUF2_0" />
 
 </head>
