--- a/public/research-decision/index.html
+++ b/public/research-decision/index.html
@@ -50,6 +50,17 @@ But your brain is somehow full of doubts all the time, no matter what you know."
 
     <link rel="manifest" href="/manifest.json">
 
+    
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-70300765-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        window['ga-disable-UA-70300765-1'] = true;
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-70300765-1');
+    </script>
+
     <meta name="google-site-verification" content="vBPgvbkTPtu2MKsCfMMETSBB-crQhj8AZuJ2JUUF2_0" />
 
 </head>
