--- a/public/crowd/index.html
+++ b/public/crowd/index.html
@@ -62,6 +62,8 @@ show signs of independent thinking.">
 
     <meta name="google-site-verification" content="vBPgvbkTPtu2MKsCfMMETSBB-crQhj8AZuJ2JUUF2_0" />
 
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
+
 </head>
 
 <body>
@@ -206,7 +208,7 @@ It&rsquo;s not a kind of content you see often. There are many programs written 
 </footer>
 
 
-<script src="https://bart747.github.io/js/main.6deac4ec03636b7e7cf06d9cffe40f5a1d264af45af1071d37a421a7795a3c79.js"></script>
+<script src="https://bart747.github.io/js/main.47d34d6b3370ccd74bfd1b9ccd33cc33baba4f2993660611aff401f02bd97df1.js"></script>
 
 </div>
 </body>
