--- a/public/ford-marketing/index.html
+++ b/public/ford-marketing/index.html
@@ -89,6 +89,8 @@ The public thought nothing of a car unless it made speed—unless it beat other 
 
     <meta name="google-site-verification" content="vBPgvbkTPtu2MKsCfMMETSBB-crQhj8AZuJ2JUUF2_0" />
 
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
+
 </head>
 
 <body>
@@ -205,7 +207,7 @@ It appeared that we were the under dog and we had the public&rsquo;s sympathy.</
 </footer>
 
 
-<script src="https://bart747.github.io/js/main.6deac4ec03636b7e7cf06d9cffe40f5a1d264af45af1071d37a421a7795a3c79.js"></script>
+<script src="https://bart747.github.io/js/main.47d34d6b3370ccd74bfd1b9ccd33cc33baba4f2993660611aff401f02bd97df1.js"></script>
 
 </div>
 </body>
