--- a/public/lynch-ideas/index.html
+++ b/public/lynch-ideas/index.html
@@ -80,6 +80,8 @@ By the way, just look at these amazing animations and color compositions.">
 
     <meta name="google-site-verification" content="vBPgvbkTPtu2MKsCfMMETSBB-crQhj8AZuJ2JUUF2_0" />
 
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
+
 </head>
 
 <body>
@@ -178,7 +180,7 @@ By the way, just look at these amazing animations and color compositions.">
 </footer>
 
 
-<script src="https://bart747.github.io/js/main.6deac4ec03636b7e7cf06d9cffe40f5a1d264af45af1071d37a421a7795a3c79.js"></script>
+<script src="https://bart747.github.io/js/main.47d34d6b3370ccd74bfd1b9ccd33cc33baba4f2993660611aff401f02bd97df1.js"></script>
 
 </div>
 </body>
