--- a/public/maintainable-ui/index.html
+++ b/public/maintainable-ui/index.html
@@ -65,6 +65,8 @@ Here are some examples of SASS based solutions that you can use to make UI more 
 
     <meta name="google-site-verification" content="vBPgvbkTPtu2MKsCfMMETSBB-crQhj8AZuJ2JUUF2_0" />
 
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
+
 </head>
 
 <body>
@@ -352,7 +354,7 @@ Maybe you won&rsquo;t remember how you figured it out.</p>
 </footer>
 
 
-<script src="https://bart747.github.io/js/main.6deac4ec03636b7e7cf06d9cffe40f5a1d264af45af1071d37a421a7795a3c79.js"></script>
+<script src="https://bart747.github.io/js/main.47d34d6b3370ccd74bfd1b9ccd33cc33baba4f2993660611aff401f02bd97df1.js"></script>
 
 </div>
 </body>
