--- a/public/resilient-ui/index.html
+++ b/public/resilient-ui/index.html
@@ -71,6 +71,8 @@ You need to design your software with ease of modification in mind.">
 
     <meta name="google-site-verification" content="vBPgvbkTPtu2MKsCfMMETSBB-crQhj8AZuJ2JUUF2_0" />
 
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
+
 </head>
 
 <body>
@@ -208,7 +210,7 @@ That&rsquo;s why I like typography — it&rsquo;s a tool to achieve clarity and 
 </footer>
 
 
-<script src="https://bart747.github.io/js/main.6deac4ec03636b7e7cf06d9cffe40f5a1d264af45af1071d37a421a7795a3c79.js"></script>
+<script src="https://bart747.github.io/js/main.47d34d6b3370ccd74bfd1b9ccd33cc33baba4f2993660611aff401f02bd97df1.js"></script>
 
 </div>
 </body>
