add new version of service worker
change asset urls (required for sw.js to work)

--- a/public/offline/index.html
+++ b/public/offline/index.html
@@ -135,7 +135,7 @@ Here&rsquo;s some cached content you might enjoy:
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
 
 
-<script src="https://bart747.github.io/js/main.adcef58f240a64a82e53ea2fbf7bbf20b682668d522e13340c50e11e4ec8a9df.js"></script>
+<script src="https://bart747.github.io/js/main.js?v=1562351519"></script>
 
 </div>
 </body>
