--- a/public/html-indicators/index.html
+++ b/public/html-indicators/index.html
@@ -245,7 +245,7 @@ When a structure is right, a procedure that uses it can be more straight forward
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
 
 
-<script src="https://bart747.github.io/js/main.adcef58f240a64a82e53ea2fbf7bbf20b682668d522e13340c50e11e4ec8a9df.js"></script>
+<script src="https://bart747.github.io/js/main.js?v=1562351519"></script>
 
 </div>
 </body>
