--- a/public/resilient-ui/index.html
+++ b/public/resilient-ui/index.html
@@ -222,7 +222,7 @@ That&rsquo;s why I like typography — it&rsquo;s a tool to achieve clarity and 
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
 
 
-<script src="https://bart747.github.io/js/main.adcef58f240a64a82e53ea2fbf7bbf20b682668d522e13340c50e11e4ec8a9df.js"></script>
+<script src="https://bart747.github.io/js/main.js?v=1562351519"></script>
 
 </div>
 </body>
