--- a/public/html-indicators/index.html
+++ b/public/html-indicators/index.html
@@ -226,7 +226,7 @@ When a structure is right, a procedure that uses it can be more straight forward
         </ul>
     </div>
     <div class="footer--copyrights">
-        &copy;2016-2018 Bartosz Wieczorek.
+        &copy;2016-2019 Bartosz Wieczorek.
         <a href="https://creativecommons.org/licenses/by/3.0/">
             Some rights reserved
         </a>
@@ -235,7 +235,10 @@ When a structure is right, a procedure that uses it can be more straight forward
 
     <div class="footer--link-top">
         <a href="#top">
-            <button>top</button>
+            <button>
+                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path fill="#cc5500" d="M8 11h3v10h2V11h3l-4-4-4 4zM4 3v2h16V3H4z"/></svg>
+                top &nbsp;
+            </button>
         </a>
     </div>
 
@@ -247,7 +250,7 @@ When a structure is right, a procedure that uses it can be more straight forward
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
 
 
-<script src="https://bart747.github.io/js/main.js?v=1570826983"></script>
+<script src="https://bart747.github.io/js/main.js?v=1570900357"></script>
 
 </div>
 </body>
