--- a/public/ui-coins/index.html
+++ b/public/ui-coins/index.html
@@ -171,7 +171,7 @@ Way better than just <em>Password</em>, which will make both forms look very sim
         </ul>
     </div>
     <div class="footer--copyrights">
-        &copy;2016-2018 Bartosz Wieczorek.
+        &copy;2016-2019 Bartosz Wieczorek.
         <a href="https://creativecommons.org/licenses/by/3.0/">
             Some rights reserved
         </a>
@@ -180,7 +180,10 @@ Way better than just <em>Password</em>, which will make both forms look very sim
 
     <div class="footer--link-top">
         <a href="#top">
-            <button>top</button>
+            <button>
+                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path fill="#cc5500" d="M8 11h3v10h2V11h3l-4-4-4 4zM4 3v2h16V3H4z"/></svg>
+                top &nbsp;
+            </button>
         </a>
     </div>
 
@@ -192,7 +195,7 @@ Way better than just <em>Password</em>, which will make both forms look very sim
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
 
 
-<script src="https://bart747.github.io/js/main.js?v=1570826983"></script>
+<script src="https://bart747.github.io/js/main.js?v=1570900356"></script>
 
 </div>
 </body>
