redesugn sw.js caching methods

--- a/public/ambitious-projects/index.html
+++ b/public/ambitious-projects/index.html
@@ -165,7 +165,7 @@ With emphasis on mental and philosophical side of creating complicated things.</
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
 
 
-<script src="https://bart747.github.io/js/main.js?v=1573059659"></script>
+<script src="https://bart747.github.io/js/main.v2.js?v=1576355479"></script>
 
 </div>
 </body>
