--- a/public/html-indicators/index.html
+++ b/public/html-indicators/index.html
@@ -253,7 +253,7 @@ When a structure is right, a procedure that uses it can be more straight forward
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
 
 
-<script src="https://bart747.github.io/js/main.js?v=1573059659"></script>
+<script src="https://bart747.github.io/js/main.v2.js?v=1576355479"></script>
 
 </div>
 </body>
