--- a/public/complexity/index.html
+++ b/public/complexity/index.html
@@ -202,7 +202,7 @@ far from what you need to process to get all the nuances of a market.</p>
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
 
 
-<script src="https://bart747.github.io/js/main.js?v=1573059659"></script>
+<script src="https://bart747.github.io/js/main.v2.js?v=1576355479"></script>
 
 </div>
 </body>
