--- a/public/craftsmen-at-work/index.html
+++ b/public/craftsmen-at-work/index.html
@@ -167,7 +167,7 @@ You can learn from it by seeing the process, tricks of the trade, work on detail
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
 
 
-<script src="https://bart747.github.io/js/main.js?v=1573059659"></script>
+<script src="https://bart747.github.io/js/main.v2.js?v=1576355479"></script>
 
 </div>
 </body>
