--- a/public/crowd/index.html
+++ b/public/crowd/index.html
@@ -225,7 +225,7 @@ It&rsquo;s not a kind of content you see often. There are many programs written 
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
 
 
-<script src="https://bart747.github.io/js/main.js?v=1573059659"></script>
+<script src="https://bart747.github.io/js/main.v2.js?v=1576355479"></script>
 
 </div>
 </body>
