--- a/public/maintainable-ui/index.html
+++ b/public/maintainable-ui/index.html
@@ -372,7 +372,7 @@ Maybe you won&rsquo;t remember how you figured it out.</p>
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
 
 
-<script src="https://bart747.github.io/js/main.js?v=1573059659"></script>
+<script src="https://bart747.github.io/js/main.v2.js?v=1576355479"></script>
 
 </div>
 </body>
