--- a/public/planck/index.html
+++ b/public/planck/index.html
@@ -221,7 +221,7 @@ his whole world for the moment.</p>
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
 
 
-<script src="https://bart747.github.io/js/main.js?v=1573059659"></script>
+<script src="https://bart747.github.io/js/main.v2.js?v=1576355479"></script>
 
 </div>
 </body>
