--- a/public/ui-coins/index.html
+++ b/public/ui-coins/index.html
@@ -198,7 +198,7 @@ Way better than just <em>Password</em>, which will make both forms look very sim
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
 
 
-<script src="https://bart747.github.io/js/main.js?v=1573059659"></script>
+<script src="https://bart747.github.io/js/main.v2.js?v=1576355479"></script>
 
 </div>
 </body>
