--- a/public/vim-typography/index.html
+++ b/public/vim-typography/index.html
@@ -248,7 +248,7 @@ Consider using some of them in <code>.gvimrc</code> instead of <code>.vimrc</cod
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
 
 
-<script src="https://bart747.github.io/js/main.js?v=1573059659"></script>
+<script src="https://bart747.github.io/js/main.v2.js?v=1576355479"></script>
 
 </div>
 </body>
