add script tags for react (fix missing downloaded react assets problem)

--- a/public/vim-typography/index.html
+++ b/public/vim-typography/index.html
@@ -245,8 +245,11 @@ Consider using some of them in <code>.gvimrc</code> instead of <code>.vimrc</cod
 
 
 
+<script src="./react.16.12.0.production.min.js" crossorigin></script>
+<script src="./react-dom.16.12.0.production.min.js" crossorigin></script>
 
-<script src="https://bart747.github.io/js/main.v2.js?v=1577986496"></script>
+
+<script src="https://bart747.github.io/js/main.v2.js?v=1577991582"></script>
 
 </div>
 </body>
