--- a/public/alt-lazy-load/index.html
+++ b/public/alt-lazy-load/index.html
@@ -224,8 +224,11 @@ Anyhow, it&rsquo;s good to have it in a toolbox.</p>
 
 
 
+<script src="./react.16.12.0.production.min.js" crossorigin></script>
+<script src="./react-dom.16.12.0.production.min.js" crossorigin></script>
 
-<script src="https://bart747.github.io/js/main.v2.js?v=1577986496"></script>
+
+<script src="https://bart747.github.io/js/main.v2.js?v=1577991582"></script>
 
 </div>
 </body>
