--- a/public/crowd/index.html
+++ b/public/crowd/index.html
@@ -222,8 +222,11 @@ It&rsquo;s not a kind of content you see often. There are many programs written 
 
 
 
+<script src="./react.16.12.0.production.min.js" crossorigin></script>
+<script src="./react-dom.16.12.0.production.min.js" crossorigin></script>
 
-<script src="https://bart747.github.io/js/main.v2.js?v=1577986495"></script>
+
+<script src="https://bart747.github.io/js/main.v2.js?v=1577991582"></script>
 
 </div>
 </body>
