--- a/public/ford-marketing/index.html
+++ b/public/ford-marketing/index.html
@@ -230,8 +230,11 @@ It appeared that we were the under dog and we had the public&rsquo;s sympathy.</
 
 
 
+<script src="./react.16.12.0.production.min.js" crossorigin></script>
+<script src="./react-dom.16.12.0.production.min.js" crossorigin></script>
 
-<script src="https://bart747.github.io/js/main.v2.js?v=1577986495"></script>
+
+<script src="https://bart747.github.io/js/main.v2.js?v=1577991582"></script>
 
 </div>
 </body>
