--- a/public/henry-ford-for-makers/index.html
+++ b/public/henry-ford-for-makers/index.html
@@ -299,8 +299,11 @@ earth definitely to say what is and what is not possible.</p>
 
 
 
+<script src="./react.16.12.0.production.min.js" crossorigin></script>
+<script src="./react-dom.16.12.0.production.min.js" crossorigin></script>
 
-<script src="https://bart747.github.io/js/main.v2.js?v=1577986495"></script>
+
+<script src="https://bart747.github.io/js/main.v2.js?v=1577991582"></script>
 
 </div>
 </body>
