--- a/public/html-indicators/index.html
+++ b/public/html-indicators/index.html
@@ -250,8 +250,11 @@ When a structure is right, a procedure that uses it can be more straight forward
 
 
 
+<script src="./react.16.12.0.production.min.js" crossorigin></script>
+<script src="./react-dom.16.12.0.production.min.js" crossorigin></script>
 
-<script src="https://bart747.github.io/js/main.v2.js?v=1577986496"></script>
+
+<script src="https://bart747.github.io/js/main.v2.js?v=1577991582"></script>
 
 </div>
 </body>
