--- a/public/lynch-ideas/index.html
+++ b/public/lynch-ideas/index.html
@@ -200,8 +200,11 @@ By the way, just look at these amazing animations and color compositions.">
 
 
 
+<script src="./react.16.12.0.production.min.js" crossorigin></script>
+<script src="./react-dom.16.12.0.production.min.js" crossorigin></script>
 
-<script src="https://bart747.github.io/js/main.v2.js?v=1577986495"></script>
+
+<script src="https://bart747.github.io/js/main.v2.js?v=1577991582"></script>
 
 </div>
 </body>
