--- a/public/payment-ui-friction/index.html
+++ b/public/payment-ui-friction/index.html
@@ -182,8 +182,11 @@ two back to just in case check data again.</p>
 
 
 
+<script src="./react.16.12.0.production.min.js" crossorigin></script>
+<script src="./react-dom.16.12.0.production.min.js" crossorigin></script>
 
-<script src="https://bart747.github.io/js/main.v2.js?v=1577986495"></script>
+
+<script src="https://bart747.github.io/js/main.v2.js?v=1577991582"></script>
 
 </div>
 </body>
