--- a/public/research-decision/index.html
+++ b/public/research-decision/index.html
@@ -181,8 +181,11 @@ You make a decision about the next move and stop looking for crystal balls.</p>
 
 
 
+<script src="./react.16.12.0.production.min.js" crossorigin></script>
+<script src="./react-dom.16.12.0.production.min.js" crossorigin></script>
 
-<script src="https://bart747.github.io/js/main.v2.js?v=1577986495"></script>
+
+<script src="https://bart747.github.io/js/main.v2.js?v=1577991582"></script>
 
 </div>
 </body>
