--- a/public/offline/index.html
+++ b/public/offline/index.html
@@ -138,11 +138,11 @@ Here&rsquo;s some cached content you might enjoy:
 
 
 
-<script src="./react.16.12.0.production.min.js" crossorigin></script>
-<script src="./react-dom.16.12.0.production.min.js" crossorigin></script>
+<script src="https://bart747.github.ioreact.16.12.0.production.min.js" crossorigin></script>
+<script src="https://bart747.github.ioreact-dom.16.12.0.production.min.js" crossorigin></script>
 
 
-<script src="https://bart747.github.io/js/main.v2.js?v=1577991582"></script>
+<script src="https://bart747.github.io/js/main.v2.js?v=1578076678"></script>
 
 </div>
 </body>
