--- a/public/resilient-ui/index.html
+++ b/public/resilient-ui/index.html
@@ -227,11 +227,11 @@ That&rsquo;s why I like typography — it&rsquo;s a tool to achieve clarity and 
 
 
 
-<script src="./react.16.12.0.production.min.js" crossorigin></script>
-<script src="./react-dom.16.12.0.production.min.js" crossorigin></script>
+<script src="https://bart747.github.ioreact.16.12.0.production.min.js" crossorigin></script>
+<script src="https://bart747.github.ioreact-dom.16.12.0.production.min.js" crossorigin></script>
 
 
-<script src="https://bart747.github.io/js/main.v2.js?v=1577991582"></script>
+<script src="https://bart747.github.io/js/main.v2.js?v=1578076678"></script>
 
 </div>
 </body>
