--- a/public/craftsmen-at-work/index.html
+++ b/public/craftsmen-at-work/index.html
@@ -164,11 +164,11 @@ You can learn from it by seeing the process, tricks of the trade, work on detail
 
 
 
-<script src="./react.16.12.0.production.min.js" crossorigin></script>
-<script src="./react-dom.16.12.0.production.min.js" crossorigin></script>
+<script src="https://bart747.github.ioreact.16.12.0.production.min.js" crossorigin></script>
+<script src="https://bart747.github.ioreact-dom.16.12.0.production.min.js" crossorigin></script>
 
 
-<script src="https://bart747.github.io/js/main.v2.js?v=1577991582"></script>
+<script src="https://bart747.github.io/js/main.v2.js?v=1578076678"></script>
 
 </div>
 </body>
