--- a/public/maintainable-ui/index.html
+++ b/public/maintainable-ui/index.html
@@ -369,11 +369,11 @@ Maybe you won&rsquo;t remember how you figured it out.</p>
 
 
 
-<script src="./react.16.12.0.production.min.js" crossorigin></script>
-<script src="./react-dom.16.12.0.production.min.js" crossorigin></script>
+<script src="https://bart747.github.ioreact.16.12.0.production.min.js" crossorigin></script>
+<script src="https://bart747.github.ioreact-dom.16.12.0.production.min.js" crossorigin></script>
 
 
-<script src="https://bart747.github.io/js/main.v2.js?v=1577991582"></script>
+<script src="https://bart747.github.io/js/main.v2.js?v=1578076678"></script>
 
 </div>
 </body>
