fix broken links

--- a/public/ford-marketing/index.html
+++ b/public/ford-marketing/index.html
@@ -230,11 +230,11 @@ It appeared that we were the under dog and we had the public&rsquo;s sympathy.</
 
 
 
-<script src="https://bart747.github.ioreact.16.12.0.production.min.js" crossorigin></script>
-<script src="https://bart747.github.ioreact-dom.16.12.0.production.min.js" crossorigin></script>
+<script src="/react.16.12.0.production.min.js" crossorigin></script>
+<script src="/react-dom.16.12.0.production.min.js" crossorigin></script>
 
 
-<script src="https://bart747.github.io/js/main.v2.js?v=1578076678"></script>
+<script src="https://bart747.github.io/js/main.v2.js?v=1578077362"></script>
 
 </div>
 </body>
