--- a/public/complexity/index.html
+++ b/public/complexity/index.html
@@ -199,11 +199,11 @@ far from what you need to process to get all the nuances of a market.</p>
 
 
 
-<script src="https://bart747.github.ioreact.16.12.0.production.min.js" crossorigin></script>
-<script src="https://bart747.github.ioreact-dom.16.12.0.production.min.js" crossorigin></script>
+<script src="/react.16.12.0.production.min.js" crossorigin></script>
+<script src="/react-dom.16.12.0.production.min.js" crossorigin></script>
 
 
-<script src="https://bart747.github.io/js/main.v2.js?v=1578076678"></script>
+<script src="https://bart747.github.io/js/main.v2.js?v=1578077362"></script>
 
 </div>
 </body>
