--- a/public/henry-ford-for-makers/index.html
+++ b/public/henry-ford-for-makers/index.html
@@ -299,11 +299,11 @@ earth definitely to say what is and what is not possible.</p>
 
 
 
-<script src="https://bart747.github.ioreact.16.12.0.production.min.js" crossorigin></script>
-<script src="https://bart747.github.ioreact-dom.16.12.0.production.min.js" crossorigin></script>
+<script src="/react.16.12.0.production.min.js" crossorigin></script>
+<script src="/react-dom.16.12.0.production.min.js" crossorigin></script>
 
 
-<script src="https://bart747.github.io/js/main.v2.js?v=1578076678"></script>
+<script src="https://bart747.github.io/js/main.v2.js?v=1578077362"></script>
 
 </div>
 </body>
